--- a/pages/api/projects.json
+++ b/pages/api/projects.json
@@ -78,7 +78,7 @@
     "name": "1942 (Recreate)",
     "image": "/1942.png",
     "description": "Replication of the classic arcade game \"1942\". The project features the iconic top-down scrolling shooter gameplay where players control an aircraft, engaging in aerial combat with enemy planes. This project showcases my skills in JavaScript, HTML5 Canvas, and game development principles, demonstrating my ability to create engaging and interactive web-based games.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/1942",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/1942/"
   },
@@ -87,7 +87,7 @@
     "name": "Pacman (Recreate)",
     "image": "/pacman.png",
     "description": "In this project, I took on the challenge of reimagining the classic arcade game Pac-Man as a web-based application. The objective was to recreate the iconic gameplay, visuals, and mechanics of the original Pac-Man while leveraging modern web technologies.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/pacman",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/pacman/"
   },
@@ -96,7 +96,7 @@
     "name": "Flappy Bird (Recreate)",
     "image": "/flappybird.png",
     "description": "This project is a web-based recreation of the iconic Flappy Bird game using modern web technologies. The game mimics the original gameplay where players control a bird navigating through a series of pipes by pressing the space bar to keep the bird in the air.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://www.jeffreycarlbugnay.info/assignments/flappybird-remake/"
   },
   {
@@ -104,7 +104,7 @@
     "name": "Street Fighter (Recreate)",
     "image": "/streetfighter.png",
     "description": "This project is a web-based recreation of the classic Street Fighter game, developed using modern web technologies. The game faithfully replicates the original fighting mechanics, allowing players to select characters and engage in one-on-one combat with a computer or another player.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/street-fighter",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/street-fighter/game.html"
   },
@@ -122,7 +122,7 @@
     "name": "Drawing Circles",
     "image": "/drawingcircles.png",
     "description": "This project is an interactive web-based assignment where users can click anywhere on a canvas to create expanding circles. This demonstrates the ability to handle user inputs, perform real-time animations, and create interactive graphics using modern web technologies",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/drawing-circles",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/drawing-circles/Drawing%20Circles.html"
   },
@@ -140,7 +140,7 @@
     "name": "Expanding and Popping Circles",
     "image": "/expandingcircles.png",
     "description": "This project is an interactive web-based assignment where random circles appear and expand upon page load. Each circle grows until it reaches a certain size, at which point it pops and disappears.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/circles",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/circles/clib.html"
   },
@@ -149,7 +149,7 @@
     "name": "Drawing Shapes Assignment",
     "image": "/drawingshapes.png",
     "description": "This project is an interactive web-based assignment named \"Drawing Shapes\", where users can select a shape to draw on a canvas. Upon clicking on the canvas, the chosen shape is rendered at the click location.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/drawing_shapes",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/drawing_shapes/JS%20Circles%20with%20Shapes.html"
   },
@@ -158,7 +158,7 @@
     "name": "Color Clicker Assignment",
     "image": "/colorclicker.png",
     "description": "In this project, I developed an interactive web application called \"Color Clicker\" that explores the manipulation of colors and elements on a web page through user interactions. The project's objective was to create a simple yet engaging interface where clicking on different boxes would trigger specific color changes based on a set of predefined rules.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/color-clicker",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/color-clicker/color_clicker.html"
   },
@@ -167,7 +167,7 @@
     "name": "Disappearing Ninja",
     "image": "/disappearingninja.png",
     "description": "In this project, I developed an interactive web application called \"Disappearing Ninja\" that demonstrates the power of jQuery in manipulating the visibility of HTML elements on a web page. The objective was to create an engaging and visually appealing experience where users can make elements disappear with a simple click, mimicking the stealthy behavior of a ninja.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/disappearing-ninja",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/disappearing-ninja/disappearing_ninja.html"
   },
@@ -176,7 +176,7 @@
     "name": "Hover In and Out",
     "image": "/hoverinandout.png",
     "description": "\"Hover In and Out\" is a web-based project that demonstrates the use of jQuery to create an interactive image-switching experience. The application features a container that displays an initial image, and when the user hovers over this container, the image seamlessly transitions to a new one.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/hover-in-and-out",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/hover-in-and-out/hover_in_and_out.html"
   },
@@ -185,7 +185,7 @@
     "name": "Ninja to Cat",
     "image": "/ninjatocat.png",
     "description": "This is the same as \"Hover In and Out\", a web-based project that demonstrates the use of jQuery to create an interactive image-switching experience. Instead of hovering, the application features a container that displays an initial image, and when the user clicks this container, the image seamlessly transitions to a new one.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/ninja_to_cat",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/ninja_to_cat/ninja_to_cat.html"
   },
@@ -203,7 +203,7 @@
     "name": "Displaying Blocks",
     "image": "/displayingblocks.png",
     "description": "\"Displaying Blocks\" is a web development project that challenges the developer to recreate a given image using the most concise and efficient code possible. This exercise tests one's ability to think creatively, optimize code, and leverage the power of HTML and CSS to achieve visual representations with minimal lines of code.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/displaying-blocks",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/displaying-blocks/displaying_blocks.html"
   },
@@ -212,7 +212,7 @@
     "name": "Javascript Basic (Static Web Page)",
     "image": "/javascriptbasic.png",
     "description": "A web development project that challenges the developer to recreate a provided image as a static web page using HTML, CSS, and JavaScript. This exercise tests the developer's ability to work under time constraints, attention to detail, and proficiency in manipulating the Document Object Model (DOM) using JavaScript.",
-    "tags": ["javascript", "jquery", "html5", "css3"],
+    "tags": ["javascript", "html5", "css3"],
     "source_code": "https://github.com/Bugz296/www.jeffreycarlbugnay.info/tree/master/files/v88_assignments/javascript-basic",
     "demo": "https://www.jeffreycarlbugnay.info/assignments/javascript-basic/javascript_basic.html"
   },
